tests/invalid/List_Invalid_3.whiley
import * from whiley.lang.*

method main(System.Console sys) -> void:
    [int] a2 = [1, 2, 3]
    int y = a2[x]
